hphp/test/quick/stack_overflow_extra_args.php.expectf
Fatal error: Stack overflow in %s/stack_overflow_extra_args.php on line 4
